--- a/pom.xml
+++ b/pom.xml
@@ -29,31 +29,33 @@
             <groupId>lib</groupId>
             <artifactId>llpl</artifactId>
             <version>0.01</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/llpl.jar</systemPath>
         </dependency>
     </dependencies>
     <build>
         <plugins>
             <plugin>
-		<groupId>net.alchim31.maven</groupId>
-		<artifactId>scala-maven-plugin</artifactId>
-		<executions>
-		    <execution>
-			<id>scala-compile-first</id>
-			<phase>process-resources</phase>
-			<goals>
-			    <goal>add-source</goal>
-			    <goal>compile</goal>
-			</goals>
-		    </execution>
-		    <execution>
-			<id>scala-test-compile</id>
-			<phase>process-test-resources</phase>
-			<goals>
-			    <goal>testCompile</goal>
-			</goals>
-		    </execution>
-		</executions>
-	    </plugin> 
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.0.0</version>
