C++ PMDK wrapper refine and refactor
1. Add partition remove feature, so we will remove used spilled data from pmem to release more memory.
2. stageArray and partitionArray append feature. Originally we need to tell Pmem the max stage size and max partition size, while these sizes are not predicted. So once size exceeds our default size, it will do append creation.

Signed-off-by: Chendi Xue <chendi.xue@intel.com>

--- a/spark.conf.example
+++ b/spark.conf.example
@@ -9,8 +9,8 @@ spark.shuffle.pmof.enable_rdma true
 spark.shuffle.pmof.enable_pmem true
 
 # for persistent memory
-spark.shuffle.pmof.max_stage_num 100
 spark.shuffle.pmof.pmem_list /dev/dax0.0,/dev/dax1.0
+spark.shuffle.spill.pmof.MemoryThreshold 16777216 
 
 # for rdma
 spark.shuffle.pmof.server_buffer_nums 32
