--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.intel.sso</groupId>
-    <artifactId>sso</artifactId>
-    <version>0.1</version>
-
+    <groupId>com.intel.spark-pmof</groupId>
+    <artifactId>spark-pmof</artifactId>
+    <version>1.0</version>
+    <packaging>pom</packaging>
+    <name>Spark-PMoF</name>
+    <licenses>
+      <license>
+        <name>Apache 2.0 License</name>
+        <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
+        <distribution>repo</distribution>
+      </license>
+    </licenses>
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
@@ -105,4 +113,7 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+      <module>native</module>
+    </modules>
 </project>
