Fix native codes issue due codes static analysis
Signed-off-by: Chendi Xue <chendi.xue@intel.com>

--- a/native/pom.xml
+++ b/native/pom.xml
@@ -10,7 +10,7 @@
       <version>1.0</version>
       <relativePath>../pom.xml</relativePath>
     </parent>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <groupId>com.intel.spark-pmof.native</groupId>
     <artifactId>native</artifactId>
