--- a/core/pom.xml
+++ b/core/pom.xml
@@ -51,6 +51,12 @@
             <version>3.0.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.23.4</version>
+            <scope>test</scope>
+        </dependency> 
     </dependencies>
     <build>
         <plugins>
