implement log based key value pmem engine
Signed-off-by: Haodong Tang <haodong.tang@intel.com>

--- a/native/src/Makefile
+++ b/native/src/Makefile
@@ -2,7 +2,7 @@
 CC=g++
 
 INCLUDES=-I${JAVA_HOME} -I${JAVA_HOME}/include/linux -I${JAVA_HOME}/include
-CFLAGS=-std=c++11 -fPIC -shared -fno-strict-overflow -fno-delete-null-pointer-checks -fwrapv -o0
+CFLAGS=-std=c++14 -fPIC -shared -fno-strict-overflow -fno-delete-null-pointer-checks -fwrapv -o0
 LIBS=-lpmemobj -lpthread
 MAIN=libjnipmdk.so
 
@@ -10,7 +10,7 @@ MAIN=libjnipmdk.so
 all: clean $(MAIN) install
 
 $(MAIN):
-	$(CC) $(CFLAGS) $(INCLUDES) -o $(MAIN) lib_jni_pmdk.cpp PersistentMemoryPool.cpp Request.cpp $(LIBS)
+	$(CC) $(CFLAGS) $(INCLUDES) -o $(MAIN) lib_jni_pmdk.cpp $(LIBS)
 
 install:
 	cp -rf $(MAIN) /usr/lib/
@@ -22,11 +22,17 @@ clean:
 
 test: clean_test 010-TestCasePersistentMemoryPool run_test
 
+benchmark: clean_test 010-TestCasePersistentMemoryPool run_benchmark
+
 010-TestCasePersistentMemoryPool:
-	$(CC) -std=c++11 010-TestCasePersistentMemoryPool.cpp -o 010-TestCasePersistentMemoryPool -lpthread -ljnipmdk
+	$(CC) $(CFLAGS) $(INCLUDES) -o $(MAIN) lib_jni_pmdk.cpp $(LIBS)
+	$(CC) -std=c++14 010-TestCasePersistentMemoryPool.cpp -o 010-TestCasePersistentMemoryPool -lpthread -ljnipmdk -lpmemobj
 
 clean_test:
 	rm -f 010-TestCasePersistentMemoryPool
 
 run_test:
 	./010-TestCasePersistentMemoryPool --success
+
+run_benchmark:
+	./010-TestCasePersistentMemoryPool -c "pmemkv benchmark" 
