--- a/core/pom.xml
+++ b/core/pom.xml
@@ -41,6 +41,11 @@
             <version>0.5</version>
         </dependency>
         <dependency>
+            <groupId>com.intel.rpmp</groupId>
+            <artifactId>rpmp</artifactId>
+            <version>0.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.23.1</version>
