--- a/core/pom.xml
+++ b/core/pom.xml
@@ -13,7 +13,7 @@
     <packaging>jar</packaging>
 
     <groupId>com.intel.spark-pmof.java</groupId>
-    <artifactId>java</artifactId>
+    <artifactId>spark-pmof-java</artifactId>
     <version>1.0</version>
 
     <dependencies>
