--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ jobs:
       #HPNL
       - cd /tmp
       - git clone https://github.com/Intel-bigdata/HPNL.git
+      - export LD_LIBRARY_PATH=/opt/local/lib:$LD_LIBRARY_PATH
       - cd HPNL && git submodule update --init --recursive && mkdir build &&  cd build
       - cmake -DWITH_VERBS=ON -DWITH_JAVA=ON ..
       - make -j && make install
