Experimental code for proxy connection with HPNL
Amending.

--- a/rpmp/CMakeLists.txt
+++ b/rpmp/CMakeLists.txt
@@ -43,5 +43,9 @@ add_subdirectory(benchmark)
 
 add_executable(main main.cc)
 add_executable(chashtest test/chash_test.cc)
+add_executable(proxy ProxyServer.cc)
+add_executable(client Client.cc)
 target_link_libraries(chashtest pmpool spdlog)
 target_link_libraries(main pmpool spdlog)
+target_link_libraries(proxy pmpool spdlog)
+target_link_libraries(client pmpool spdlog)
