--- a/rpmp/config/rpmp.conf
+++ b/rpmp/config/rpmp.conf
@@ -1,5 +1,7 @@
-rpmp.node.list  node1,node2
+rpmp.node.list  172.168.0.209,172.168.0.40
 rpmp.network.heartbeat-interval 5
+rpmp.network.proxy.address 172.168.0.209
+rpmp.network.proxy.port 12348
 rpmp.network.server.address 172.168.0.209
 rpmp.network.server.port 12346
 rpmp.network.worker 10
