--- a/rpmp/config/rpmp.conf
+++ b/rpmp/config/rpmp.conf
@@ -1,11 +1,13 @@
-rpmp.node.list  node1,node2
+rpmp.node.list 172.168.0.40
 rpmp.network.heartbeat-interval 5
+rpmp.network.proxy.address 172.168.0.209
+rpmp.network.proxy.port 12348
 rpmp.network.server.address 172.168.0.209
 rpmp.network.server.port 12346
 rpmp.network.worker 10
 rpmp.network.buffer.number 16
 rpmp.network.buffer.size 65536
-rpmp.storage.namespace.size 253669408768
+rpmp.storage.namespace.size 126833655808
 rpmp.storage.namespace.list     /dev/dax0.0,/dev/dax0.1,/dev/dax1.0,/dev/dax1.1
 rpmp.task.set 2,38,20,56
 rpmp.network.buffer.size 65536
