data replication at RPMP client

--- a/rpmp/benchmark/CMakeLists.txt
+++ b/rpmp/benchmark/CMakeLists.txt
@@ -24,3 +24,9 @@ target_link_libraries(put_and_read pmpool_client_jni)
 
 add_executable(put_and_get put_and_get.cc)
 target_link_libraries(put_and_get pmpool_client_jni)
+
+add_executable(put put.cc)
+target_link_libraries(put pmpool_client_jni)
+
+add_executable(get get.cc)
+target_link_libraries(get pmpool_client_jni)
