consistent hash get replica nodes

--- a/rpmp/CMakeLists.txt
+++ b/rpmp/CMakeLists.txt
@@ -42,11 +42,11 @@ add_subdirectory(test)
 add_subdirectory(benchmark)
 
 add_executable(main main.cc)
-# add_executable(chashtest test/chash_test.cc)
+add_executable(chashtest test/chash_test.cc)
 # add_executable(proxy ProxyServer.cc)
 add_executable(proxyMain ProxyMain.cc)
 add_executable(client Client.cc)
-# target_link_libraries(chashtest pmpool spdlog)
+target_link_libraries(chashtest pmpool spdlog)
 target_link_libraries(main pmpool spdlog)
 # target_link_libraries(proxy pmpool spdlog)
 target_link_libraries(proxyMain pmpool spdlog)
