--- a/rpmp/config/rpmp.conf
+++ b/rpmp/config/rpmp.conf
@@ -1,7 +1,7 @@
 rpmp.node.list 172.168.0.209
 rpmp.network.heartbeat-interval 5
 rpmp.network.proxy.address 172.168.0.40
-rpmp.network.proxy.port 12350
+rpmp.proxy.client.service.port 12350
 rpmp.network.server.address 172.168.0.209
 rpmp.network.server.port 12346
 rpmp.network.worker 10
@@ -13,3 +13,5 @@ rpmp.task.set 2,38,20,56
 rpmp.network.buffer.size 65536
 rpmp.data.replica 2
 rpmp.data.minreplica 2
+rpmp.proxy.replica.service.port 12340
+rpmp.proxy.loadBalanceFactor 5
