Add metastore service  and heartbeat module among proxy and nodes

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,11 @@
 	path = rpmp/include/spdlog
 	url = https://github.com/gabime/spdlog.git
 	branch = v1.x
+[submodule "rpmp/include/hiredis"]
+	path = rpmp/include/hiredis
+	url = https://github.com/redis/hiredis.git
+	branch = master
+[submodule "rpmp/include/jsoncpp"]
+	path = rpmp/include/jsoncpp
+	url = https://github.com/open-source-parsers/jsoncpp.git
+	branch = master
