--- a/rpmp/CMakeLists.txt
+++ b/rpmp/CMakeLists.txt
@@ -33,6 +33,8 @@ include_directories(${PROJECT_SOURCE_DIR}/)
 include_directories(${PROJECT_SOURCE_DIR}/include)
 include_directories(${PROJECT_SOURCE_DIR}/include/spdlog/include)
 include_directories(${PROJECT_BINARY_DIR}/googletest/googletest-src/googletest/include)
+include_directories(${PROJECT_SOURCE_DIR}/include/hiredis)
+include_directories(${PROJECT_SOURCE_DIR}/include/jsoncpp/include)
 
 enable_testing()
 
@@ -45,7 +47,7 @@ add_executable(main main.cc)
 add_executable(chashtest test/chash_test.cc)
 add_executable(proxyMain ProxyMain.cc)
 add_executable(client Client.cc)
-target_link_libraries(chashtest pmpool spdlog)
-target_link_libraries(main pmpool spdlog)
-target_link_libraries(proxyMain pmpool spdlog)
-target_link_libraries(client pmpool spdlog)
+target_link_libraries(chashtest pmpool spdlog hiredis jsoncpp)
+target_link_libraries(main pmpool spdlog hiredis jsoncpp)
+target_link_libraries(proxyMain pmpool spdlog hiredis jsoncpp)
+target_link_libraries(client pmpool spdlog hiredis jsoncpp)
