--- a/rpmp/config/rpmp.conf
+++ b/rpmp/config/rpmp.conf
@@ -1,4 +1,4 @@
-rpmp.node.list 172.168.0.209
+rpmp.node.list 172.168.0.209,172.168.0.40
 rpmp.network.heartbeat-interval 5
 rpmp.network.proxy.address 172.168.0.40
 rpmp.proxy.client.service.port 12350
@@ -15,3 +15,6 @@ rpmp.data.replica 2
 rpmp.data.minreplica 2
 rpmp.proxy.replica.service.port 12340
 rpmp.proxy.loadBalanceFactor 5
+rpmp.network.heartbeat.port 12355
+rpmp.metastore.redis.ip 127.0.0.1
+rpmp.metastore.redis.port 6379
