Refactor config property

--- a/rpmp/config/rpmp.conf
+++ b/rpmp/config/rpmp.conf
@@ -1,5 +1,5 @@
 rpmp.node.list 172.168.0.209,172.168.0.40
-rpmp.network.heartbeat-interval 5
+rpmp.network.heartbeat-interval.sec 5
 rpmp.network.proxy.address 172.168.0.40
 rpmp.proxy.client.service.port 12350
 rpmp.network.server.address 172.168.0.209
@@ -12,9 +12,9 @@ rpmp.storage.namespace.list     /dev/dax0.0,/dev/dax0.1,/dev/dax1.0,/dev/dax1.1
 rpmp.task.set 2,38,20,56
 rpmp.network.buffer.size 65536
 rpmp.data.replica 2
-rpmp.data.minreplica 2
+rpmp.data.min.replica 2
 rpmp.proxy.replica.service.port 12340
-rpmp.proxy.loadBalanceFactor 5
+rpmp.proxy.load-balance-factor 5
 rpmp.network.heartbeat.port 12355
 rpmp.metastore.redis.ip 127.0.0.1
 rpmp.metastore.redis.port 6379
