Simplify stop script

--- a/rpmp/CMakeLists.txt
+++ b/rpmp/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory(test)
 add_subdirectory(benchmark)
 
 file(COPY bin/start-rpmp.sh DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
+file(COPY bin/stop-rpmp.sh DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
 
 add_executable(main main.cc)
 add_executable(chashtest test/chash_test.cc)
