[RPMP] Enable metastore switch (#135)

--- a/rpmp/config/rpmp.conf
+++ b/rpmp/config/rpmp.conf
@@ -18,3 +18,4 @@ rpmp.proxy.load-balance-factor 5
 rpmp.network.heartbeat.port 12355
 rpmp.metastore.redis.ip 0.0.0.0
 rpmp.metastore.redis.port 6379
+rpmp.metastore.type REDIS
