[RPMP] Import redis plus plus as a wrapper to access Redis. (#136)

--- a/rpmp/CMakeLists.txt
+++ b/rpmp/CMakeLists.txt
@@ -51,10 +51,10 @@ add_executable(chashtest test/chash_test.cc)
 add_executable(rocksdbtest test/rocksdb_test.cc)
 add_executable(proxy-server ProxyMain.cc)
 add_executable(client Client.cc)
-target_link_libraries(chashtest pmpool spdlog hiredis jsoncpp rocksdb)
-target_link_libraries(data-server pmpool spdlog hiredis jsoncpp rocksdb)
-target_link_libraries(proxy-server pmpool spdlog hiredis jsoncpp rocksdb)
-target_link_libraries(client pmpool spdlog hiredis jsoncpp rocksdb)
-target_link_libraries(rocksdbtest spdlog hiredis jsoncpp rocksdb)
+target_link_libraries(chashtest pmpool spdlog hiredis jsoncpp rocksdb redis++)
+target_link_libraries(data-server pmpool spdlog hiredis jsoncpp rocksdb redis++)
+target_link_libraries(proxy-server pmpool spdlog hiredis jsoncpp rocksdb redis++)
+target_link_libraries(client pmpool spdlog hiredis jsoncpp rocksdb redis++)
+target_link_libraries(rocksdbtest spdlog hiredis jsoncpp rocksdb redis++)
 
 file(COPY ${PROJECT_SOURCE_DIR}/config DESTINATION .)
